--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-app",
+  "name": "weather forcast for somali cities",
   "private": true,
   "version": "0.0.0",
   "type": "module",
